// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Line Chart renders 1`] = `
<div
  className="sc-hHoBQP eycokq"
  style={
    Object {
      "height": 526,
    }
  }
>
  <div
    className="sc-dzTBpY dfPXcv"
  >
    <button
      className="sc-dkzciG gwBLl"
      onClick={[Function]}
    >
      <svg
        className="sc-kgTSHT sc-hWJaYh  joojGx"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.556 6.068a.5.5 0 00-.503.864l.503-.864zM16 8.652l.417.276a.5.5 0 00-.165-.708L16 8.652zm-2.634 3.065a.5.5 0 00.833.553l-.833-.553zm8.695-1.238a.5.5 0 00-.67.742l.67-.742zM12.053 6.932l3.695 2.152.504-.864-3.696-2.152-.503.864zm3.53 1.444l-2.217 3.341.833.553 2.218-3.342-.834-.552zm8.417 8.7C24 21.448 20.422 25 16 25v1c4.966 0 9-3.991 9-8.924h-1zM16 25c-4.422 0-8-3.552-8-7.924H7C7 22.009 11.034 26 16 26v-1zm-8-7.924c0-4.372 3.578-7.924 8-7.924v-1c-4.966 0-9 3.991-9 8.924h1zm13.39-5.855A7.868 7.868 0 0124 17.076h1a8.869 8.869 0 00-2.94-6.597l-.67.742z"
          fill="currentColor"
        />
      </svg>
    </button>
    <div />
    <button
      className="sc-dkzciG fXsahz"
      onClick={[Function]}
    >
      <svg
        className="sc-gUJyNl"
        fill="none"
        fontSize="1.5rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 6.5v14.616m0 0l-4.384-4.385M16 21.115l4.385-4.384M6.5 18.923v3.654A2.923 2.923 0 009.423 25.5h13.154a2.923 2.923 0 002.923-2.923v-3.654"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </button>
    <button
      className="sc-dkzciG fXsahz"
      onClick={[Function]}
    >
      <svg
        className="sc-eJDSGI"
        fill="none"
        fontSize="1.5rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.5 12.832V6.5h6.334m-6.33 0l18.998 19m-6.334-.005H25.5v-6.332m0-6.331V6.5h-6.334m6.33 0L6.5 25.5m6.334-.005H6.501v-6.332"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </button>
  </div>
  <div
    className="sc-iSaLEN kYDsC"
  >
    <div
      className="sc-iCGmxv fVxTWl"
    >
      <svg
        fill="none"
        height="40"
        viewBox="0 0 40 40"
        width="40"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          opacity={0.85}
        >
          <path
            d="M36.804 24.783H32.16a2.053 2.053 0 010-4.105h4.645a2.053 2.053 0 010 4.105z"
            fill="url(#Group_7413_svg__paint0_linear)"
          />
          <path
            d="M6.822 24.783h-4.27a2.053 2.053 0 010-4.105H5.57l2.983-5.74a2.052 2.052 0 113.64 1.888l-3.55 6.842a2.053 2.053 0 01-1.82 1.115z"
            fill="#CB75F6"
          />
          <path
            d="M16.736 32.904a2.102 2.102 0 01-.835-.178 2.052 2.052 0 01-1.04-2.736l9.942-22.271a2.053 2.053 0 013.79.095l5.474 14.177a2.051 2.051 0 11-3.825 1.478l-3.708-9.579-7.93 17.79a2.052 2.052 0 01-1.868 1.224z"
            fill="url(#Group_7413_svg__paint1_linear)"
          />
          <path
            d="M16.736 32.904a2.052 2.052 0 01-1.868-1.252l-6.363-14.97a2.053 2.053 0 013.777-1.608l6.363 14.97a2.053 2.053 0 01-1.888 2.86h-.02z"
            fill="#CB75F6"
          />
        </g>
        <defs>
          <linearGradient
            gradientUnits="userSpaceOnUse"
            id="Group_7413_svg__paint0_linear"
            x1={31.504}
            x2={34.041}
            y1={24.741}
            y2={19.227}
          >
            <stop
              stopColor="#FDBF00"
            />
            <stop
              offset={1}
              stopColor="#FDBF00"
              stopOpacity={0}
            />
          </linearGradient>
          <linearGradient
            gradientUnits="userSpaceOnUse"
            id="Group_7413_svg__paint1_linear"
            x1={17.794}
            x2={35.776}
            y1={23.876}
            y2={23.939}
          >
            <stop
              stopColor="#FFD60A"
            />
            <stop
              offset={1}
              stopColor="#FFD60A"
              stopOpacity={0}
            />
          </linearGradient>
        </defs>
      </svg>
    </div>
    <p
      className="sc-fLHMoE sc-hITdmI foQuGO bVgXuY"
      size={20}
    >
      KPI Overview
    </p>
    <div
      className="sc-kjOLYi"
    >
      <div
        className="sc-lfMBgC cMbNSY"
      >
        <button
          className="sc-jyEbFP gKXXis"
          onClick={[Function]}
        >
          <p
            className="sc-fLHMoE sc-iEQSvc llYQVa hBqDpB"
            size={14}
          >
            by all devices
          </p>
          <svg
            className="sc-cUEOzv"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div
    className="sc-eCDatj jbgKgt"
  >
    <div
      className="sc-fsYUhA byOOTx"
    >
      <button
        className="sc-jPOtPJ kJFihq"
        onClick={[Function]}
      >
        <div
          className="sc-kzlvbC bJRlzp"
          color="frieza.100"
        />
        <div
          className="sc-dGFlkP dSBaLR"
        >
          Active players
        </div>
        <div
          className="sc-exbeZg iVUZRy"
        >
          3,174
        </div>
      </button>
      <button
        className="sc-jPOtPJ kJFihq"
        onClick={[Function]}
      >
        <div
          className="sc-kzlvbC ocxPv"
          color="krillin.100"
        />
        <div
          className="sc-dGFlkP dSBaLR"
        >
          Turnover
        </div>
        <div
          className="sc-exbeZg iVUZRy"
        >
          12,174.23
        </div>
      </button>
      <button
        className="sc-jPOtPJ hAisZQ"
        onClick={[Function]}
      >
        <div
          className="sc-kzlvbC nHLXF"
          color="roshi.100"
        />
        <div
          className="sc-dGFlkP dSBaLR"
        >
          GGR
        </div>
        <div
          className="sc-exbeZg iVUZRy"
        >
          12,174.23
        </div>
      </button>
      <button
        className="sc-jPOtPJ kJFihq"
        onClick={[Function]}
      >
        <div
          className="sc-kzlvbC iAfDRM"
          color="whis.100"
        />
        <div
          className="sc-dGFlkP dSBaLR"
        >
          Bets
        </div>
        <div
          className="sc-exbeZg iVUZRy"
        >
          3,174
        </div>
      </button>
      <button
        className="sc-jPOtPJ hAisZQ"
        onClick={[Function]}
      >
        <div
          className="sc-kzlvbC egeNgl"
          color="chiChi.100"
        />
        <div
          className="sc-dGFlkP dSBaLR"
        >
          Margin
        </div>
        <div
          className="sc-exbeZg iVUZRy"
        >
          5.38%
        </div>
      </button>
    </div>
  </div>
  <div
    className="recharts-responsive-container sc-iTQEHp A-DRdY"
    style={
      Object {
        "height": "100%",
        "maxHeight": undefined,
        "minHeight": undefined,
        "minWidth": undefined,
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`Line Chart renders Loading 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hHoBQP eycokq"
    style={
      Object {
        "height": 526,
      }
    }
  >
    <div
      className="sc-dzTBpY dfPXcv"
    >
      <button
        className="sc-dkzciG gwBLl"
        onClick={[Function]}
      >
        <svg
          className="sc-kgTSHT sc-hWJaYh  joojGx"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.556 6.068a.5.5 0 00-.503.864l.503-.864zM16 8.652l.417.276a.5.5 0 00-.165-.708L16 8.652zm-2.634 3.065a.5.5 0 00.833.553l-.833-.553zm8.695-1.238a.5.5 0 00-.67.742l.67-.742zM12.053 6.932l3.695 2.152.504-.864-3.696-2.152-.503.864zm3.53 1.444l-2.217 3.341.833.553 2.218-3.342-.834-.552zm8.417 8.7C24 21.448 20.422 25 16 25v1c4.966 0 9-3.991 9-8.924h-1zM16 25c-4.422 0-8-3.552-8-7.924H7C7 22.009 11.034 26 16 26v-1zm-8-7.924c0-4.372 3.578-7.924 8-7.924v-1c-4.966 0-9 3.991-9 8.924h1zm13.39-5.855A7.868 7.868 0 0124 17.076h1a8.869 8.869 0 00-2.94-6.597l-.67.742z"
            fill="currentColor"
          />
        </svg>
      </button>
      <div />
      <button
        className="sc-dkzciG fXsahz"
        onClick={[Function]}
      >
        <svg
          className="sc-gUJyNl"
          fill="none"
          fontSize="1.5rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 6.5v14.616m0 0l-4.384-4.385M16 21.115l4.385-4.384M6.5 18.923v3.654A2.923 2.923 0 009.423 25.5h13.154a2.923 2.923 0 002.923-2.923v-3.654"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
      <button
        className="sc-dkzciG fXsahz"
        onClick={[Function]}
      >
        <svg
          className="sc-eJDSGI"
          fill="none"
          fontSize="1.5rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.5 12.832V6.5h6.334m-6.33 0l18.998 19m-6.334-.005H25.5v-6.332m0-6.331V6.5h-6.334m6.33 0L6.5 25.5m6.334-.005H6.501v-6.332"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      className="sc-iSaLEN kYDsC"
    >
      <div
        className="sc-iCGmxv fVxTWl"
      >
        <svg
          fill="none"
          height="40"
          viewBox="0 0 40 40"
          width="40"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            opacity={0.85}
          >
            <path
              d="M36.804 24.783H32.16a2.053 2.053 0 010-4.105h4.645a2.053 2.053 0 010 4.105z"
              fill="url(#Group_7413_svg__paint0_linear)"
            />
            <path
              d="M6.822 24.783h-4.27a2.053 2.053 0 010-4.105H5.57l2.983-5.74a2.052 2.052 0 113.64 1.888l-3.55 6.842a2.053 2.053 0 01-1.82 1.115z"
              fill="#CB75F6"
            />
            <path
              d="M16.736 32.904a2.102 2.102 0 01-.835-.178 2.052 2.052 0 01-1.04-2.736l9.942-22.271a2.053 2.053 0 013.79.095l5.474 14.177a2.051 2.051 0 11-3.825 1.478l-3.708-9.579-7.93 17.79a2.052 2.052 0 01-1.868 1.224z"
              fill="url(#Group_7413_svg__paint1_linear)"
            />
            <path
              d="M16.736 32.904a2.052 2.052 0 01-1.868-1.252l-6.363-14.97a2.053 2.053 0 013.777-1.608l6.363 14.97a2.053 2.053 0 01-1.888 2.86h-.02z"
              fill="#CB75F6"
            />
          </g>
          <defs>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Group_7413_svg__paint0_linear"
              x1={31.504}
              x2={34.041}
              y1={24.741}
              y2={19.227}
            >
              <stop
                stopColor="#FDBF00"
              />
              <stop
                offset={1}
                stopColor="#FDBF00"
                stopOpacity={0}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Group_7413_svg__paint1_linear"
              x1={17.794}
              x2={35.776}
              y1={23.876}
              y2={23.939}
            >
              <stop
                stopColor="#FFD60A"
              />
              <stop
                offset={1}
                stopColor="#FFD60A"
                stopOpacity={0}
              />
            </linearGradient>
          </defs>
        </svg>
      </div>
      <p
        className="sc-fLHMoE sc-hITdmI foQuGO bVgXuY"
        size={20}
      >
        KPI Overview
      </p>
      <div
        className="sc-kjOLYi"
      >
        <div
          className="sc-lfMBgC cMbNSY"
        >
          <button
            className="sc-jyEbFP gKXXis"
            onClick={[Function]}
          >
            <p
              className="sc-fLHMoE sc-iEQSvc llYQVa hBqDpB"
              size={14}
            >
              by all devices
            </p>
            <svg
              className="sc-cUEOzv"
              fill="none"
              fontSize="1.5rem"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      className="sc-bFBiFA iHWuxe"
    >
      <svg
        fill="none"
        height="160"
        width="160"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M40 83.682C19.661 83.682 0 0 0 0v160h160v-50.209s-20.339-44.184-40-44.184c-20.339 0-20.339 2.008-40 2.008-20.339 0-20.339 16.067-40 16.067z"
          fill="#D8E0E3"
        />
        <path
          d="M52.881 93.603C26.441 93.603 0 29 0 29v131h160V45.15s-27.119 100.494-53.559 100.494C80 145.644 80 93.603 52.881 93.603z"
          fill="#EAEEF0"
        />
      </svg>
      <p
        className="sc-fLHMoE sc-kzjlfA jYylpR hXJDnM"
        color="trunks.100"
        size={14}
      >
        Loading...
      </p>
    </div>
  </div>
  <div
    className="sc-hHoBQP eycokq"
    style={
      Object {
        "height": 526,
      }
    }
  >
    <div
      className="sc-dzTBpY dfPXcv"
    >
      <button
        className="sc-dkzciG gwBLl"
        onClick={[Function]}
      >
        <svg
          className="sc-kgTSHT sc-hWJaYh  joojGx"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.556 6.068a.5.5 0 00-.503.864l.503-.864zM16 8.652l.417.276a.5.5 0 00-.165-.708L16 8.652zm-2.634 3.065a.5.5 0 00.833.553l-.833-.553zm8.695-1.238a.5.5 0 00-.67.742l.67-.742zM12.053 6.932l3.695 2.152.504-.864-3.696-2.152-.503.864zm3.53 1.444l-2.217 3.341.833.553 2.218-3.342-.834-.552zm8.417 8.7C24 21.448 20.422 25 16 25v1c4.966 0 9-3.991 9-8.924h-1zM16 25c-4.422 0-8-3.552-8-7.924H7C7 22.009 11.034 26 16 26v-1zm-8-7.924c0-4.372 3.578-7.924 8-7.924v-1c-4.966 0-9 3.991-9 8.924h1zm13.39-5.855A7.868 7.868 0 0124 17.076h1a8.869 8.869 0 00-2.94-6.597l-.67.742z"
            fill="currentColor"
          />
        </svg>
      </button>
      <div />
      <button
        className="sc-dkzciG fXsahz"
        onClick={[Function]}
      >
        <svg
          className="sc-gUJyNl"
          fill="none"
          fontSize="1.5rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 6.5v14.616m0 0l-4.384-4.385M16 21.115l4.385-4.384M6.5 18.923v3.654A2.923 2.923 0 009.423 25.5h13.154a2.923 2.923 0 002.923-2.923v-3.654"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
      <button
        className="sc-dkzciG fXsahz"
        onClick={[Function]}
      >
        <svg
          className="sc-eJDSGI"
          fill="none"
          fontSize="1.5rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.5 12.832V6.5h6.334m-6.33 0l18.998 19m-6.334-.005H25.5v-6.332m0-6.331V6.5h-6.334m6.33 0L6.5 25.5m6.334-.005H6.501v-6.332"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      className="sc-iSaLEN kYDsC"
    >
      <div
        className="sc-iCGmxv fVxTWl"
      >
        <svg
          fill="none"
          height="40"
          viewBox="0 0 40 40"
          width="40"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            opacity={0.85}
          >
            <path
              d="M36.804 24.783H32.16a2.053 2.053 0 010-4.105h4.645a2.053 2.053 0 010 4.105z"
              fill="url(#Group_7413_svg__paint0_linear)"
            />
            <path
              d="M6.822 24.783h-4.27a2.053 2.053 0 010-4.105H5.57l2.983-5.74a2.052 2.052 0 113.64 1.888l-3.55 6.842a2.053 2.053 0 01-1.82 1.115z"
              fill="#CB75F6"
            />
            <path
              d="M16.736 32.904a2.102 2.102 0 01-.835-.178 2.052 2.052 0 01-1.04-2.736l9.942-22.271a2.053 2.053 0 013.79.095l5.474 14.177a2.051 2.051 0 11-3.825 1.478l-3.708-9.579-7.93 17.79a2.052 2.052 0 01-1.868 1.224z"
              fill="url(#Group_7413_svg__paint1_linear)"
            />
            <path
              d="M16.736 32.904a2.052 2.052 0 01-1.868-1.252l-6.363-14.97a2.053 2.053 0 013.777-1.608l6.363 14.97a2.053 2.053 0 01-1.888 2.86h-.02z"
              fill="#CB75F6"
            />
          </g>
          <defs>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Group_7413_svg__paint0_linear"
              x1={31.504}
              x2={34.041}
              y1={24.741}
              y2={19.227}
            >
              <stop
                stopColor="#FDBF00"
              />
              <stop
                offset={1}
                stopColor="#FDBF00"
                stopOpacity={0}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Group_7413_svg__paint1_linear"
              x1={17.794}
              x2={35.776}
              y1={23.876}
              y2={23.939}
            >
              <stop
                stopColor="#FFD60A"
              />
              <stop
                offset={1}
                stopColor="#FFD60A"
                stopOpacity={0}
              />
            </linearGradient>
          </defs>
        </svg>
      </div>
      <p
        className="sc-fLHMoE sc-hITdmI foQuGO bVgXuY"
        size={20}
      >
        KPI Overview
      </p>
      <div
        className="sc-kjOLYi"
      >
        <div
          className="sc-lfMBgC cMbNSY"
        >
          <button
            className="sc-jyEbFP gKXXis"
            onClick={[Function]}
          >
            <p
              className="sc-fLHMoE sc-iEQSvc llYQVa hBqDpB"
              size={14}
            >
              by all devices
            </p>
            <svg
              className="sc-cUEOzv"
              fill="none"
              fontSize="1.5rem"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      className="sc-eCDatj jbgKgt"
    >
      <div
        className="sc-fsYUhA byOOTx"
      >
        <button
          className="sc-jPOtPJ kJFihq"
          onClick={[Function]}
        >
          <div
            className="sc-kzlvbC bJRlzp"
            color="frieza.100"
          />
          <div
            className="sc-dGFlkP dSBaLR"
          >
            Active players
          </div>
          <div
            className="sc-exbeZg iVUZRy"
          >
            3,174
          </div>
        </button>
        <button
          className="sc-jPOtPJ kJFihq"
          onClick={[Function]}
        >
          <div
            className="sc-kzlvbC ocxPv"
            color="krillin.100"
          />
          <div
            className="sc-dGFlkP dSBaLR"
          >
            Turnover
          </div>
          <div
            className="sc-exbeZg iVUZRy"
          >
            12,174.23
          </div>
        </button>
        <button
          className="sc-jPOtPJ hAisZQ"
          onClick={[Function]}
        >
          <div
            className="sc-kzlvbC nHLXF"
            color="roshi.100"
          />
          <div
            className="sc-dGFlkP dSBaLR"
          >
            GGR
          </div>
          <div
            className="sc-exbeZg iVUZRy"
          >
            12,174.23
          </div>
        </button>
        <button
          className="sc-jPOtPJ kJFihq"
          onClick={[Function]}
        >
          <div
            className="sc-kzlvbC iAfDRM"
            color="whis.100"
          />
          <div
            className="sc-dGFlkP dSBaLR"
          >
            Bets
          </div>
          <div
            className="sc-exbeZg iVUZRy"
          >
            3,174
          </div>
        </button>
        <button
          className="sc-jPOtPJ hAisZQ"
          onClick={[Function]}
        >
          <div
            className="sc-kzlvbC egeNgl"
            color="chiChi.100"
          />
          <div
            className="sc-dGFlkP dSBaLR"
          >
            Margin
          </div>
          <div
            className="sc-exbeZg iVUZRy"
          >
            5.38%
          </div>
        </button>
      </div>
    </div>
    <div
      className="recharts-responsive-container sc-iTQEHp A-DRdY"
      style={
        Object {
          "height": "100%",
          "maxHeight": undefined,
          "minHeight": undefined,
          "minWidth": undefined,
          "width": "100%",
        }
      }
    />
  </div>
</div>
`;
